# Global-Auth

./: Cargo.toml
migration/: user.migration.sql
src/: main.rs
src/db/: user.rs
src/routes/: login.rs  register.rs
