[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
cookie = {version="0.16"}
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ] }
dotenvy = "0.15"
dotenv = "0.15.0"
uuid = {version="1.2.2", features = ["v4","fast-rng","macro-diagnostics"]}
bcrypt = "0.13.0"
